fixed navbar overlap while scrolling

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -36,9 +36,14 @@
 .top {
   position: fixed;
   width: 100%;
+  z-index: 2;
 }
 
 .spacer {
   width: 100%;
   height: 150px;
+}
+
+.wrapper {
+  z-index: 1;
 }
